# llmgoat

./: .dockerignore  .gitignore  API_SECURITY_REVIEW.md  CHALLENGES.md  CHALLENGES_KO.md  Dockerfile  Dockerfile.gpu  README.md  WINDOWS_SETUP.md  check.sh  compose.github.yaml  compose.local.yaml  pyproject.toml
.github/workflows/: docker.yaml
llmgoat/: __init__.py  app.py
llmgoat/challenges/: a01_prompt_injection.py  a02_sensitive_information_disclosure.py  a03_goat_calc.py  a03_supply_chain_vulnerabilities.py  a04_data_and_model_poisoning.py  a05_improper_output_handling.py  a06_excessive_agency.py  a07_system_prompt_leakage.py  a08_vector_embedding_weaknesses.py  a09_misinformation.py  a10_goat_evaluator.py  a10_unbounded_consumption.py  image_utils.py  metadata_utils.py
llmgoat/llm/: gguf_metadata.py  manager.py  output_sanitizer.py  prompting.py
llmgoat/static/: style.css
llmgoat/static/js/: main.js
llmgoat/templates/: index.html  layout.html  welcome_content.html
llmgoat/templates/challenges/: a01-prompt-injection.html  a02-sensitive-information-disclosure.html  a03-supply-chain-vulnerabilities.html  a04-data-and-model-poisoning.html  a05-improper-output-handling.html  a06-excessive-agency.html  a07-system-prompt-leakage.html  a08-vector-embedding-weaknesses.html  a09-misinformation.html  a10-unbounded-consumption.html
llmgoat/utils/: definitions.py  flask_logger.py  helpers.py  hf_logger.py  llama_logger.py  logger.py  translations.py
